Fixed #557 - improve visibility of available update in settings

--- a/src/main/resources/static/css/dark/style.css
+++ b/src/main/resources/static/css/dark/style.css
@@ -653,6 +653,14 @@ input[type="radio"]:not(:checked) + span::before, [type="radio"]:not(:checked) +
     cursor: pointer;
 }
 
+.banner {
+    width: auto;
+    border-radius: 5px;
+    padding: 0 3vmin;
+    display: inline-block;
+    font-weight: bold;
+}
+
 .invisible {
     opacity: 0;
 }
